# rustthings

./: .gitignore  README.md  bench_C.txt  bench_rust.txt  laptop.txt
C/: .gitignore  Makefile  ds800.c  main.c
includeccode/: Cargo.toml  build.rs
includeccode/src/: main.rs
includeccode/src/cstuff/: mod.rs  test.c  test.h
includerust/host/: .gitignore  Makefile  main.c
includerust/scaledown/: Cargo.toml  build.rs
includerust/scaledown/include/: imageproc_bindings.h  imageproc_bindings.hxx
includerust/scaledown/src/: lib.rs  resolution.rs
rust/: .gitignore  Cargo.toml
rust/src/: imageproc.rs  main.rs  parse_args.rs  resolution.rs
staticallocator/: Cargo.toml
staticallocator/myalloc/src/: lib.rs  myallocimpl.rs
staticallocator/src/: main.rs
webscaledown/server/: Cargo.toml
webscaledown/server/src/: imageproc.rs  main.rs  resolution.rs
webscaledown/swarm/: locust.csh  swarm.csh
wrapperallocator/: Cargo.toml
wrapperallocator/src/: main.rs  myalloc.rs
