[package]
name = "scaledown"
version = "0.1.0"
edition = "2021"

[lib]
name = "scaledown"
crate_type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.6"
nom = "7.1.3"
num = "0.4.0"
rayon = "1.7.0"

[build-dependencies]
cbindgen = "0.24.3"
