[package]
name = "webscaledown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.0"
actix-web = "4.0.1"
env_logger = "0.10.0"
image = "0.24.6"
log = "0.4.17"
mime = "0.3.17"
nom = "7.1.3"
num = "0.4.0"
rayon = "1.7.0"
